...
                  const Text(
                    "Status",
                    style: TextStyle(
                        color: Colors.grey, fontWeight: FontWeight.bold),
                  ),
                  const SizedBox(width: 8),
                  Text(widget.task.done ? 'Completed' : 'Incomplete',
                      style: const TextStyle(fontWeight: FontWeight.bold)),
                  Expanded(child: Container()),
                  const Text(
                    "Tick if completed",
                    style: TextStyle(
                        color: Colors.grey, fontWeight: FontWeight.bold),
                  ),
                  const SizedBox(width: 8),
                  SizedBox(
                    width: 24,
                    height: 24,
                    child: Checkbox(
                      key: const Key('checkbox'),
                      value: widget.task.done,
                      onChanged: (value) {
                        ref
                            .read(todoProvider.notifier)
                            .update(widget.task.copyWith(done: value!));
                      },
...
