...
              ),
            ),
          ],
        ),
      ),
      floatingActionButton: FloatingActionButton(
        key: const Key('add_todo_button'),
        onPressed: () {
          router.push(AddTodoScreen.path);
        },
        backgroundColor: Colors.red,
        shape: const CircleBorder(),
        child: const Icon(
...
